SN: Swagger and Postman collection Updates
