# src/main/java/com/sinch/message/router/models/OptOutResponse.java
@@ -1,0 +1,21 @@
+package com.sinch.message.router.models;
+
+import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.sinch.message.router.enums.OptOutEnum;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Setter
+@Getter
+@NoArgsConstructor
+@AllArgsConstructor
+@JsonInclude(JsonInclude.Include.NON_NULL)
+@JsonIgnoreProperties(ignoreUnknown = true)
+public class OptOutResponse {
+
+    private OptOutEnum status;
+
+}
